crates/tui/tests/storybook/snapshots/app_dialog_command::messages_dialog_empty.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---









─ messages (0) ───────────────────────────────────────────────────────
   (no messages)
 ○ normal                                                     1:1 100%
