crates/tui/tests/storybook/snapshots/app_dialog_command::messages_dialog_empty.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 12
  9   0   2 fg=AnsiValue(208)
  9   2  12 fg=AnsiValue(208) attrs=dim
  9  14  56 fg=AnsiValue(208)
 10   1   1 fg=Black bg=White
 11   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 11  10  52 bg=AnsiValue(233)
 11  62   8 fg=AnsiValue(244) bg=AnsiValue(233)
