crates/tui/tests/storybook/snapshots/app_dialog_command::messages_dialog_with_entries.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---







─ messages (2) ───────────────────────────────────────────────────────
 [error] parser
   first error message

 [warn] renderer
   second warning
 ○ normal
