crates/tui/tests/storybook/snapshots/app_dialog_command::permissions_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---






─ permissions ────────────────────────────────────────────────────────
 bash: ls/*
 web_fetch: https://example.com/*
 bash: cat/*
 bash: cat/* /etc/*
 write_file: src/**/*.rs



 ○ normal                                                       1:1 0%
