crates/tui/tests/storybook/snapshots/app_dialog_command::resume_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


     ┌ sessions ─────────────────────────────────────────────────┐
     │                                                           │
     │                                                           │
     │                                                           │
     │                                                           │
     │    1.4M 5d   spike: notebook preview                      │
     │   85.6K 1d   first pass at the resume picker              │
     │    4.0K 2h   wire up the diff renderer                    │
     │   12.1K 5m   investigate parser regression                │
     └───────────────────────────────────────────────────────────┘
     ┌ filter ───────────────────────────────────────────────────┐
     │ filter sessions…                               workspace  │
─────└───────────────────────────────────────────────────────────┘──────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
