crates/tui/tests/storybook/snapshots/app_dialog_command::resume_dialog.step-1.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


     ┌ sessions ─────────────────────────────────────────────────┐
     │                                                           │
     │                                                           │
     │                                                           │
     │                                                           │
     │                                                           │
     │                                                           │
     │   85.6K 1d   first pass at the resume picker              │
     │   12.1K 5m   investigate parser regression                │
     └───────────────────────────────────────────────────────────┘
     ┌ filter ───────────────────────────────────────────────────┐
  tip│ parser                            ⌥d: delete · workspace  │ing…
─────└───────────────────────────────────────────────────────────┘──────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:7 100%
