crates/tui/tests/storybook/snapshots/app_dialog_command::resume_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 72 18
  2   5   1 fg=AnsiValue(244)
  2   6  10 fg=AnsiValue(244) attrs=dim
  2  16  50 fg=AnsiValue(244)
  3   5   1 fg=AnsiValue(244)
  3  65   1 fg=AnsiValue(244)
  4   5   1 fg=AnsiValue(244)
  4  65   1 fg=AnsiValue(244)
  5   5   1 fg=AnsiValue(244)
  5  65   1 fg=AnsiValue(244)
  6   5   1 fg=AnsiValue(244)
  6  65   1 fg=AnsiValue(244)
  7   5   1 fg=AnsiValue(244)
  7  65   1 fg=AnsiValue(244)
  8   5   1 fg=AnsiValue(244)
  8  65   1 fg=AnsiValue(244)
  9   5   1 fg=AnsiValue(244)
  9  65   1 fg=AnsiValue(244)
 10   5   1 fg=AnsiValue(244)
 10   6  59 bg=AnsiValue(237)
 10  65   1 fg=AnsiValue(244)
 11   5  61 fg=AnsiValue(244)
 12   5   1 fg=AnsiValue(244)
 12   6   8 fg=AnsiValue(244) attrs=dim
 12  14  52 fg=AnsiValue(244)
 13   0   5 fg=AnsiValue(208) attrs=bold
 13   5   1 fg=AnsiValue(244)
 13   7   1 fg=Black bg=White
 13   8  15 attrs=dim
 13  65   5 fg=AnsiValue(244)
 14   0   5 fg=AnsiValue(237)
 14   5  61 fg=AnsiValue(244)
 14  66   6 fg=AnsiValue(237)
 16   0  72 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  54 bg=AnsiValue(233)
 17  64   8 fg=AnsiValue(244) bg=AnsiValue(233)
